...
                bgColor && { backgroundColor: bgColor },
                { borderRadius },
                marginTop && { marginTop },
            ]}
            disabled={checkIsAuthor}
            {...rest}
            testID="burst-sheet-channel-item"
        >
            <Text style={[styles.btnText, { color }]} numberOfLines={1}>
                Burst to{" "}
                {type === "private" && (
                    <>
                        <FontAwesome5 name="lock" size={14} color={color} />{" "}
...
