...
    // );
    // const privateChannels = channels.filter(
    //     (channel) => channel.tag !== "#everyone" && channel.type === "private",
    // );

    const data = [
        { id: 0, tag: "All Feeds", type: "public" },
        ...(everyoneChannel ? [everyoneChannel] : []),
        ...otherChannels,
        // ...privateChannels,
        // ...publicChannels,
    ];

...
                                key={index}
                                onPress={() => {
                                    addChannel(id);
                                }}
                                style={[styles.channel, viewStyle]}
                                ref={(ref) => (channelRefs.current[id] = ref)}
                                testID="channel-bar-chip"
                            >
                                {channel.type === "private" ? (
                                    <View
                                        style={{
                                            flex: 1,
                                            flexDirection: "row",
...
