...
                if (channel.type === "private" && !isCurrentUserMember) {
                    return null;
                }

                return (
                    <TouchableOpacity
                    testID="burst-channel-chip"
                        key={index}
                        activeOpacity={0.75}
                        disabled={disabled}
                        style={{
                            flexDirection: "row",
                            alignItems: "center",
...
                        marginVertical: 4,
                    }}
                    onPress={() => {
                        setShowBurstToChannelModal(true);
                        burstSpecificChannelModalSheetRef.current?.open();
                    }}
                    testID="burst-sheet-button"
                >
                    {/* <AddIcon stroke={"#479ae2"} /> */}
                    <StarAddIcon />
                </TouchableOpacity>
            )}
            {showJoinAndBurstModal && (
...
