...
    if (activeRoute === "Post") {
        return null;
    }

    return (
        <View style={styles.container}>
            <TouchableOpacity style={styles.menu} onPress={goToHome} testID="home-nav-icon">
                <HomeIcon {...styles.icon} fill={fillColor("Home")} />
            </TouchableOpacity>

            <TouchableOpacity
                style={styles.menu}
                onPress={goToYourTeam}
...
