appId: "com.mycurio.curio"
---
# - launchApp
# - waitForAnimationToEnd
# - assertVisible: "Login"
# - tapOn:
#     point: 14%,51%
# - inputText: "mabel@yopmail.com"

# # Tap outside to dismiss keyboard
# - tapOn:
#     point: 12%,29%

# # Tap on Password field and enter text
# - tapOn:
#     point: 17%,61%
# - inputText: "Test@123"

# - tapOn:
#     point: 12%,29%


# # Tap on Login button
# - tapOn: "Login"

# # Verify login success
# - assertNotVisible: "Login"

-  tapOn:
      id: home-nav-icon
- tapOn:
      id: "channel-bar-chip"
      index: 1
- tapOn:
      id: "burst-channel-chip"
      index: 0
- tapOn:
      id: "burst-sheet-button"

- tapOn:
      id: "burst-sheet-channel-item"
      index: 1

- tapOn: "Confirm"

- tapOn:
      id: "channel-bar-chip"
      index: 0

- tapOn:
      id: "channel-bar-chip"
      index: 1

- tapOn:
      id: "burst-channel-chip"
      index: 0

- waitForAnimationToEnd




# - tapOn:
#       id: "profile-nav-icon"

# - tapOn:
#       id: "profile-more"
# - tapOn: "Logout"
# - tapOn: "Logout"
# - waitForAnimationToEnd